--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -1,2 +1,2 @@
 <h1>main-panel works!</h1>
-<button class="btn btn-success" (click)="prueba()">click</button>
+<button class="btn btn-success" (click)="prueba()">Boton prueba</button>
